[gd_scene load_steps=3 format=3 uid="uid://asteroid_belt_001"]

[ext_resource type="Script" path="res://maps/AsteroidBelt.gd" id="1"]
[ext_resource type="Texture2D" path="res://kenney_space-shooter-redux/Backgrounds/darkPurple.png" id="2"]

[node name="AsteroidBelt" type="Node2D"]
script = ExtResource("1")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.1, 0.1)
motion_mirroring = Vector2(1280, 0)

[node name="Background" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(640, 360)
texture = ExtResource("2")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.4, 0.4)
motion_mirroring = Vector2(1280, 0)

[node name="Stars" type="CPUParticles2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2(640, 0)
amount = 120
lifetime = 8.0
emission_shape = 3
emission_rect_extents = Vector2(640, 10)
direction = Vector2(0, 1)
gravity = Vector2(0, 40)
initial_velocity_min = 30.0
initial_velocity_max = 60.0

[node name="Asteroids" type="Node2D" parent="."]

[node name="EnemySpawner" type="Node2D" parent="."]
position = Vector2(640, -50)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="AsteroidTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true
